// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCode should render correctly 1`] = `
<DocumentFragment>
  <code
    class="bpk-code"
  >
    npm install react --save-dev
  </code>
</DocumentFragment>
`;

exports[`BpkCode should render correctly with "alternate" 1`] = `
<DocumentFragment>
  <code
    class="bpk-code bpk-code--alternate"
  >
    npm install react --save-dev
  </code>
</DocumentFragment>
`;

exports[`BpkCode should render correctly with custom "className" 1`] = `
<DocumentFragment>
  <code
    class="bpk-code my-class"
  >
    npm install react --save-dev
  </code>
</DocumentFragment>
`;
